[package]
name = "bbs-discord-webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] } 
dotenvy = "0.15.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "macros", "runtime-tokio-rustls"] }
tokio = { version = "1.40.0", features = ["full"] }
